<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:src="@drawable/search_back"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/search_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/skin_search_bar_bg"
                android:drawableLeft="@drawable/skin_search_bar_icon"
                android:drawablePadding="10dp"
                android:hint="@string/search_hint"
                android:paddingLeft="10dp"
                android:textSize="13sp"/>

            <ImageView
                android:id="@+id/close_btn_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/bbs_close"
                android:visibility="gone"
            />

        </RelativeLayout>


        <TextView
            android:id="@+id/search_btn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/search_btn"
            android:textSize="16sp"
        />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_loading"/>

        <include layout="@layout/layout_error"/>

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                />
            </android.support.v4.widget.SwipeRefreshLayout>


            <LinearLayout
                android:id="@+id/container_hot_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hot_search"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hot_search_gl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </FrameLayout>

    </FrameLayout>

</LinearLayout>